# cc-anywhere-windows

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
scripts/: cc-hook.ps1
src/cc_anywhere/: __init__.py  __main__.py  main.py
src/cc_anywhere/adapters/: __init__.py  discord_bot.py  slack_bot.py  telegram_bot.py  web.py
src/cc_anywhere/core/: __init__.py  event_bus.py  events.py  exceptions.py  formatters.py  git_utils.py  hook_config.py  logger.py  models.py  name_generator.py  session.py  summarizer.py
src/cc_anywhere/static/: app.js  index.html  style.css
tests/: __init__.py  test_summarizer.py
