[project]
name = "cc-anywhere-windows"
version = "0.1.0"
description = "CC-Anywhere for Windows - Claude Code remote access using WezTerm backend"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Web terminal (no libtmux - uses WezTerm CLI)
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",

    # Messenger bots
    "discord.py>=2.3",
    "python-telegram-bot>=21.0",
    "slack-bolt>=1.18",

    # Utils
    "aiosqlite>=0.19",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
]

[project.scripts]
cc-anywhere = "cc_anywhere.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_anywhere"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
